--- a/stats.html
+++ b/stats.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>GitHub Profile Viewer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/stats_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <script src="ts/script.js"></script>
 </head>
 
 <body>
@@ -12,11 +13,7 @@
         <h1>GitHub Profile Viewer</h1>
     </div>
 
-    <div id="main">
-        <div id="inputs">
-            <input type="text" id="github-link" placeholder="https://github.com/username">
-        </div>
-        <input type="button" id="submit" value="View Profile"><br>
+    <div id="main"> 
     </div>
 </body>
 
