--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,8 @@
         <h1>GitHub Profile Viewer</h1>
     </div>
 
-    <div id="main"> 
+    <div id="profile">
+        <h1 id="username"></h1>
     </div>
 </body>
 
