--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,6 @@
     <title>GitHub Profile Viewer</title>
     <link rel="stylesheet" href="css/stats_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <script src="ts/script.js"></script>
 </head>
 
 <body>
@@ -15,7 +14,13 @@
 
     <div id="profile">
         <h1 id="username"></h1>
+        <p id="bio"></p>
+        <p id="followers"></p>
+        <p id="following"></p>
+        <p id="public_repos"></p>
     </div>
+
+    <script src="ts/script.js"></script>
 </body>
 
 </html>
