added location feature

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 
     <!-- Profile Section -->
     <div id="profile" class="hidden">
-        <h1 id="username"></h1>
-        <p id="bio"></p>
-        <p id="followers"></p>
-        <p id="following"></p>
-        <p id="public_repos"></p>
+        <div id="text-elements">
+            <h1 id="username"></h1>
+            <p id="name"></p>
+            <p id="bio"></p>
+            <p id="location"></p>
+            <p id="followers"></p>
+            <p id="following"></p>
+            <p id="public_repos"></p>
+        </div>
         <button id="back-button">Back to Search</button>
     </div>
 
