--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <title>GitHub Profile Viewer</title>
-    <link rel="icon" href="img/favicon-svg.svg" type="image/x-icon">
-
-    
+    <link rel="icon" href="img/favicon-svg.svg" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
@@ -24,7 +22,6 @@
       </p>
     </div>
 
-    <!-- Input Section -->
     <div id="main">
       <div id="inputs">
         <input
@@ -36,7 +33,6 @@
       </div>
     </div>
 
-    <!-- Profile Section -->
     <div id="profile" class="hidden">
       <div class="profile-container">
         <div class="profile-header">
@@ -77,12 +73,9 @@
             </div>
           </div>
 
-          <!-- Languages Section -->
           <div class="languages-section">
             <h2><i class="fas fa-code"></i> Most Used Languages</h2>
-            <div id="languages-container" class="languages-container">
-              <!-- Languages will be inserted here -->
-            </div>
+            <div id="languages-container" class="languages-container"></div>
           </div>
 
           <div class="profile-actions">
