--- a/index.html
+++ b/index.html
@@ -77,6 +77,50 @@
             <h2><i class="fas fa-code"></i> Most Used Languages</h2>
             <div id="languages-container" class="languages-container"></div>
           </div>
+          <div id="contribution-graph" class="contribution-section">
+            <h3>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 16 16"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <rect x="2" y="2" width="12" height="12" rx="2" />
+                <path
+                  d="M6 6h.01M10 6h.01M6 10h.01M10 10h.01M14 6h.01M14 10h.01"
+                />
+              </svg>
+              Contribution Activity (public repositories)
+            </h3>
+            <div class="contribution-calendar"></div>
+          </div>
+
+          <div id="starred-repos" class="repo-section">
+            <h3>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <polygon
+                  points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
+                />
+              </svg>
+              Starred Repositories
+            </h3>
+            <div id="starred-repos-container"></div>
+          </div>
 
           <div class="profile-actions">
             <a
